Сделал gateway, auth, customer и проверил
